--- a/02-HTML-structure-and-tags/index.html
+++ b/02-HTML-structure-and-tags/index.html
@@ -13,6 +13,9 @@
         <h1>Hello World</h1>
         <h1>Hello World</h1>
         <h1>Hello World</h1>
+        <p>hello every one
+            
+        </p>
     </body>
 
 </html>
